@@ -23,9 +23,12 @@ import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.*;
+import org.apache.hadoop.hdfs.protocol.FSConstants;
 import org.apache.hadoop.hdfs.protocol.LocatedBlock;
 import org.apache.hadoop.hdfs.protocol.LocatedBlocks;
+import org.apache.hadoop.hdfs.protocol.QuotaExceededException;
 
+import static org.junit.Assert.*;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -75,5 +78,31 @@ public class TestAbandonBlock {
 
     // And close the file
     fout.close();
+  }
+
+  @Test
+  /** Make sure that the quota is decremented correctly when a block is abandoned */
+  public void testQuotaUpdatedWhenBlockAbandoned() throws IOException {
+    DistributedFileSystem dfs = (DistributedFileSystem)fs;
+    // Setting diskspace quota to 3MB
+    dfs.setQuota(new Path("/"), FSConstants.QUOTA_DONT_SET, 3 * 1024 * 1024);
+
+    // Start writing a file with 2 replicas to ensure each datanode has one.
+    // Block Size is 1MB.
+    String src = FILE_NAME_PREFIX + "test_quota1";
+    FSDataOutputStream fout = fs.create(new Path(src), true, 4096, (short)2, 1024 * 1024);
+    for (int i = 0; i < 1024; i++) {
+      fout.writeByte(123);
+    }
+
+    // Shutdown one datanode, causing the block abandonment.
+    cluster.getDataNodes().get(0).shutdown();
+
+    // Close the file, new block will be allocated with 2MB pending size.
+    try {
+      fout.close();
+    } catch (QuotaExceededException e) {
+      fail("Unexpected quota exception when closing fout");
+    }
   }
 }
